--- a/_posts/2023-09-30-dialup.md
+++ b/_posts/2023-09-30-dialup.md
@@ -69,12 +69,13 @@ They were always former Dialup World accounts. And they always had a contentious
 
 Now, when something doesn’t make sense, it pays to be curious. (If you don’t work somewhere that rewards curiosity, find somewhere else to work.) Sometimes you’ll investigate a mystery and find that the underlying systems are reasonable – you simply didn’t understand them yet. Other times, you’ll uncover something delightfully and poetically dysfunctional, as I did the day I learned about Dialup World’s former billing system.
 
-## A devilishly simple billing system
+## A way to bill subscribers
 
 1. When a customer submitted their signup form to Dialup World, they would add a row for that new customer to their 20,000-row Excel spreadsheet.
 2. Then, they would put that signup form in a pile with all the other signup forms of customers who had signed up on that day of the month.
-3. Every day they would find which one of the 31 piles of literal signup forms corresponded to that day of the month, and charge the customers in that pile one by one for a month of service.
-4. When a customer called to cancel their service, they would stop that customer from being billed further by simply – I shit you not – finding that customer’s signup form and trashing it. No signup form in the pile, no more bills going out.
+3. Every day, they would find which one of the 31 piles of literal signup forms corresponded to that day of the month.
+4. Then, they'd charge the customers in that pile, one by one, for a month of service.
+5. When a customer called to cancel their service, they would stop that customer from being billed further by simply – I shit you not – finding that customer’s signup form and trashing it. No signup form in the pile, no more bills going out.
 
 You gotta hand it to these people. The seminal startup essay “[Do Things that Don't Scale](http://paulgraham.com/ds.html)” didn’t come out until 2013, and these people were doing things that didn’t scale way back in the late 90s. They got 20,000 signups billed with the process equivalent of a shoelace and an empty soda can.
 
