Forgot to mention that the race is close.

--- a/_posts/2024-10-12-bc-votes.markdown
+++ b/_posts/2024-10-12-bc-votes.markdown
@@ -17,7 +17,7 @@ I’ve done voting guides for Vancouver and Canada in the past, but I’ve never
 
 The main difference this time is that instead of the center-right BC Liberals, the NDP now faces the actually-right BC Conservative Party. While they might not have seemed electable only a few weeks ago, this recently-fringe party has been downplaying and walking back some of their more extreme statements in the hope of assuaging centrists who would have voted Liberal.
 
-With such a sharp difference between the options, the outcome will ultimately come down to who turns up.
+With such a close race between two very different choices, the outcome will ultimately come down to who turns up.
 
 If you live in BC, **make a plan to vote** this week. Early voting continues on Sunday, Tuesday, and Wednesday, with the final decision on Sat Oct 19.
 
