Simplified by embedding link.

--- a/_posts/2024-10-12-bc-votes.markdown
+++ b/_posts/2024-10-12-bc-votes.markdown
@@ -17,7 +17,7 @@ I’ve done voting guides for Vancouver and Canada in the past, but I’ve never
 
 The main difference this time is that instead of the center-right BC Liberals, the NDP now faces the actually-right BC Conservative Party. While they might not have seemed electable only a few weeks ago, this recently-fringe party has been downplaying and walking back some of their more extreme statements in the hope of assuaging centrists who would have voted Liberal.
 
-With such a close race between two very different choices, the outcome will ultimately come down to who turns up.
+With such a [close race](https://338canada.com/bc/) between two very different choices, the outcome will ultimately come down to who turns up.
 
 If you live in BC, **make a plan to vote** this week. Early voting continues on Sunday, Tuesday, and Wednesday, with the final decision on Sat Oct 19.
 
@@ -25,6 +25,5 @@ Further reading:
 
 - The [Vancouver Sun’s summary of party platforms](https://vancouversun.com/news/bc-election-2024-12-hot-topics-party-platforms)
 - The [BC Leaders’ Debate](https://www.youtube.com/live/38PM2_aTQ60?si=59ASMQxZijtQq5o2&t=137)
-- [338Canada’s Projections](https://338canada.com/bc/)
 - [Chris Porter’s BC election guide](https://canadianveggie.com/2024/10/06/bc-election-2024-who-should-i-vote-for/)
 - [How to Vote in BC](https://elections.bc.ca/2024-provincial-election/ways-to-vote/)
