--- a/posts/2002-08-29-babyname.markdown
+++ b/posts/2002-08-29-babyname.markdown
@@ -18,7 +18,7 @@ GLEN COVE, NY, USA - Sounds easy, doesn't it? Acclaim Entertainment is making th
 
 
 
-A PR rep from Acclaim, Alan Lewis, said such promotions are part of what it takes to stand out in a crowded market. For example, when the GameCube was gearing up for release, Nintendo had a "What would you do for a GameCube?" contest involving eating pet food, and they celebrated the release of "Mario Sunshine" with fans diving into a tonne of pasta for prizes. Altering Time is planning a promotion of even greater scale, in which they block off random freeways and set up an exhibition. "There will be one of those huge tents, like in carnivals," said a spokesperson for AT. "The Official Altering Time Publicity Stunt Exhibition will have demonstrations of such things as the health dangers of Q Codec 7, really nicely treated cows and chickens, Sean hating people, and a real-life demonstration of the [Flash Stick Fight](/silliness/stickfight.php). To top it all off, anyone who legally names their baby 'http://www.alteringtime.com/' will get $50." An analyst with ZWS Industries pointed out that a $50 prize open to everyone is more valuable than a $10 000 prize open to one person. "There's 6 000 000 000 people in the world, times $50," said the analyst. "I don't know how much more than $10 000 that is, but it hurts to think about it."
+A PR rep from Acclaim, Alan Lewis, said such promotions are part of what it takes to stand out in a crowded market. For example, when the GameCube was gearing up for release, Nintendo had a "What would you do for a GameCube?" contest involving eating pet food, and they celebrated the release of "Mario Sunshine" with fans diving into a tonne of pasta for prizes. Altering Time is planning a promotion of even greater scale, in which they block off random freeways and set up an exhibition. "There will be one of those huge tents, like in carnivals," said a spokesperson for AT. "The Official Altering Time Publicity Stunt Exhibition will have demonstrations of such things as the health dangers of Q Codec 7, really nicely treated cows and chickens, Sean hating people, and a real-life demonstration of the Flash Stick Fight. To top it all off, anyone who legally names their baby 'http://www.alteringtime.com/' will get $50." An analyst with ZWS Industries pointed out that a $50 prize open to everyone is more valuable than a $10 000 prize open to one person. "There's 6 000 000 000 people in the world, times $50," said the analyst. "I don't know how much more than $10 000 that is, but it hurts to think about it."
 
 
 
